--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@speechly/speech-recognition-polyfill": "^1.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assemblyai": "^4.4.1",
     "async-mutex": "^0.4.0",
     "puppeteer": "^21.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "recordrtc": "^5.6.2",
     "web-vitals": "^2.1.4"
   },
