--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "assemblyai": "^4.4.1",
     "async-mutex": "^0.4.0",
+    "axios": "^1.6.8",
     "puppeteer": "^21.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
