--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "assemblyai": "^4.4.1",
     "async-mutex": "^0.4.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "puppeteer": "^21.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "recordrtc": "^5.6.2",
