--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.1.0",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
+    "react-youtube": "^10.1.0",
     "recordrtc": "^5.6.2",
     "sweetalert2": "^11.10.8",
     "web-vitals": "^2.1.4"
